--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ img{
     /* TEST */
     background-color: salmon;
 }
-
+/* TOP BAR */
 .top-bar{
     width: calc(100% - 230px);
     height: 80px;
@@ -35,6 +35,16 @@ img{
     position: fixed;
     top: 0;
     right: 0;
+}
+/* TOP BAR BUTTON/LINK */
+.top-bar a{
+    text-decoration: none;
+    color: white;
+    border: 3px solid white;
+    border-radius: 20px;
+    padding: 10px 10px;
+    float: right;
+    margin: 15px 20px;
 }
 
 /* MAIN */
@@ -110,6 +120,15 @@ main{
     width: calc(100% / 6);
     height: 100%;
     margin: 10px 5px;
+}
+/* CONTAINER SONGS BOTTOM */
+.container-songs-bottom{
+    display: flex;
+    text-align: center;
+    margin: 0 15px;
+}
+.container-songs-bottom img{
+    border-radius: 50%;
 }
 
 .container-img-middle{
