--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ img{
     padding: 10px 10px;
     float: right;
     margin: 15px 20px;
+    font-size: 10px;
 }
 
 /* MAIN */
@@ -163,3 +164,18 @@ footer{
     /* TEST */
     background-color: seagreen;
 }
+
+/* MEDIA QUARY MAIN CONTAINER */
+@media screen and (max-width: 700px) {
+    .songs{
+        flex: none;
+        width: 22%;
+        
+    }
+    .container-songs{
+        flex-wrap: wrap;
+    }
+}
+
+
+
