--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ img{
     margin: 20px 20px;
 }
 
-
 /* CONTAINER WRAP */
 .container-wrap{
     width: 100%;
@@ -46,6 +45,8 @@ img{
     float: right;
     margin: 15px 20px;
     font-size: 10px;
+    display: inline-block;
+    line-height: normal;
 }
 
 /* MAIN */
@@ -166,7 +167,7 @@ footer{
 }
 
 /* MEDIA QUARY MAIN CONTAINER */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1100px) {
     .songs{
         flex: none;
         width: 22%;
@@ -177,5 +178,9 @@ footer{
     }
 }
 
-
+@media screen and (max-width: 700px) {
+   .songs{
+       width: 40%;
+   }
+}
 
